myapp-ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp



apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
spec:
  rules:
  - host: myapp.mohammedragab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp-svc
          servicePort: 80
    
          


apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: regoo707/apps:test-app-1
        ports:
        - containerPort: 3000


apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: myapp
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: myapp
